bin_PROGRAMS=MID

MID_SOURCES = MID.c \
	      MID_structures.c \
	      MID_arguments.c \
	      MID_functions.c \
	      MID_http.c \
	      MID_interfaces.c \
	      MID_socket.c \
      	      MID_ssl_socket.c \
	      MID_unit.c \
	      url_parser.c \
	      MID_structures.h \
	      MID_arguments.h \
	      MID_functions.h \
	      MID_http.h \
	      MID_interfaces.h \
	      MID_socket.h \
	      MID_ssl_socket.h \
	      MID_unit.h \
	      url_parser.h

