bin_PROGRAMS = MID

MID_SOURCES = \
			  src/MID.c \
			  src/MID_structures.c \
			  src/MID_arguments.c \
			  src/MID_functions.c \
			  src/MID_http.c \
			  src/MID_interfaces.c \
			  src/MID_socket.c \
			  src/MID_ssl_socket.c \
			  src/MID_unit.c \
			  src/url_parser.c \
			  src/MID.h \
			  src/MID_structures.h \
			  src/MID_arguments.h \
			  src/MID_functions.h \
			  src/MID_http.h \
			  src/MID_interfaces.h \
			  src/MID_socket.h \
			  src/MID_ssl_socket.h \
			  src/MID_unit.h \
			  src/url_parser.h \
			  config.h

AM_CFLAGS=-I$(abs_srcdir)/src -I$(abs_srcdir)